--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
           chmod 600 ./deploy_key
           cd docs/.vitepress
           tar -cvzf dist.tar.gz dist
-          scp dist.tar.gz -i ../../deploy_key ${{env.host}}:${env.dest}
+          scp dist.tar.gz -i ../../deploy_key ${{env.host}}:${{env.dest}}
           ssh ${{env.host}} 'cd ${{env.dest}} && tar -zvxf dist.tar.gz'
